# verifai

./: .env.sample  .gitignore  Makefile  README.md  docker-compose.yml  test_results_template.csv
backend/: pyproject.toml
backend/app/: main.py
backend/app/adapters/: __init__.py  factiai_adapter.py  openai_adapter.py  search_adapter.py
backend/app/api/: verify.py
backend/app/core/: config.py
backend/app/fusion/: engine.py
backend/app/models/: schemas.py
mobile/: App.tsx  app.json  package-lock.json  package.json  tsconfig.json
mobile/src/config/: constants.ts
mobile/src/screens/: InputScreen.tsx  ResultScreen.tsx
mobile/src/services/: api.ts
testing/: analyze_360_results.py  analyze_results.py  debug_single_test.py  failure_report_20251030_214344.txt  failure_report_20251030_221852.txt  generate_1000_statements.py  generate_640_more.py  review_failures.py  run_1000_tests.py  run_3000_tests.py  run_tests.py  run_tests_old.py  test_results.csv  test_results_1000_20251030_222525.csv  test_results_1000_20251031_103839.csv  test_results_1000_20251031_121418.csv  test_results_3000_20251031_172515.csv  test_statements.csv  test_statements_1000.csv  validate_test_script.py
